# tanguymauve

./: .replit  README.md  hello_world.txt  pyproject.toml  qt_note.py  themes_zsh
Clock/: chat_gpt_clock.py
Hangman/: chatGPT_correction.py  hangman.py  refactorised_hangman.py  things_you_cant_do.txt
Passwrd/: first_attempt_passwrd.py  passwrd_myway.py
projects_bash/hello_world/: bestdayever.sh  bestdayever.sh.save  getrichquick.sh  himom.sh
projects_c/hello_world/: hello_world  hello_world.c
projects_python/: dokkan-team-builder.py  projects_todo.txt  test.py
projects_python/Clock/: clock.py  setup.py
projects_python/Note Taking App/: qt_note.py  qt_note_preview.py
projects_python/POO/: hello_oop.py
projects_python/Passwrd/: chat_gpt_passwrd.py  first_attempt_passwrd.py
projects_python/Project_Euler/: probleme2.py
projects_python/Snake_Game/: snake.py  snake_axel.py
projects_python/Weight_Convertor/: weight.py  weight_tkinter.py
projects_python/beginner_projects/: calculator.py  dice_roll.py  number_guessing.py  rock_paper_scissors.py  test_tkinter.py
projects_python/flask/: flasktest.py
projects_python/malware/: decrypt.py  thekey.key
projects_python/morpion/: morpion.py
projects_python/note_app/: .txt  note.py  note_with_Qt.py
projects_python/passwrd/: fastest_passwrd.py
projects_python/project_euler/: key.key  probleme1.py
projects_python/regle_de_trois/: regle_de_trois.py
projects_python/simulateur_possibilités/: simulateur.py
projects_python/snake/: notes.txt  snake.py  tesgt.py
projects_python/to_do_list/: to_do_list.py
(+14 files in other folders)
