[tool.poetry]
name = "tanguymauve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gl-1106 = "0.2.6"
pyglview = "1.3.4"
pyopenglng = "0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
